--- a/local/pressure-washing-skellow.html
+++ b/local/pressure-washing-skellow.html
@@ -1,1 +1,228 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>Skellow Pressure Washing Experts | Driveways, Patios & Decking Cleaning</title>
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-skellow.html">
+<meta name="description" content="Professional pressure washing and exterior cleaning in Skellow, Doncaster. Driveways, patios, decking, walls, and pathways restored. Call 07735 873694 for a free quote.">
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
+
+<style>
+html{-webkit-text-size-adjust:100%;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
+header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
+.logo{max-height:90px;width:auto;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
+.call-btn:hover{background:#333;}
+main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
+h1,h2,h3{color:#111;}
+label{font-weight:bold;display:block;margin-bottom:6px;cursor:pointer;}
+input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
+.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
+.form-row input{width:22px;height:22px;}
+button{cursor:pointer;min-height:48px;}
+button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
+.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;}
+.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
+.lightbox:target{display:flex;}
+footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
+footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
+</style>
+
+<!-- LocalBusiness + Geo + ServiceArea Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"@id":"https://homerepairs4u.com/local/pressure-washing-skellow.html#business",
+"name":"Home Repairs 4U – Skellow Pressure Washing",
+"url":"https://homerepairs4u.com/local/pressure-washing-skellow.html",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"telephone":"+447735873694",
+"description":"Expert pressure washing services in Skellow, Doncaster for driveways, patios, decking, walls, and pathways. High-quality cleaning, maintenance, and protection for your exterior surfaces.",
+"address":{"@type":"PostalAddress","addressLocality":"Skellow","addressRegion":"South Yorkshire","addressCountry":"GB"},
+"geo":{"@type":"GeoCoordinates","latitude":53.595,"longitude":-1.175},
+"openingHours":"Mo-Su 07:00-20:00",
+"areaServed":[{"@type":"Place","name":"Skellow"},{"@type":"Place","name":"Doncaster"},{"@type":"Place","name":"Woodlands"},{"@type":"Place","name":"Cadeby"}],
+"serviceType":["Pressure washing","Driveway cleaning","Patio cleaning","Decking cleaning","Exterior surface cleaning"]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "Do you clean residential and commercial properties in Skellow?",
+"acceptedAnswer": {"@type": "Answer","text": "Yes, we offer professional pressure washing for homes and small commercial properties throughout Skellow and surrounding areas."}
+},
+{
+"@type": "Question",
+"name": "How often should driveways and patios be cleaned?",
+"acceptedAnswer": {"@type": "Answer","text": "Generally, a professional clean once per year is sufficient, with more frequent cleaning for shaded or heavily trafficked areas."}
+},
+{
+"@type": "Question",
+"name": "Are your methods safe for all surfaces?",
+"acceptedAnswer": {"@type": "Answer","text": "Yes, we adjust water pressure and cleaning techniques based on the material to ensure safe and effective results."}
+},
+{
+"@type": "Question",
+"name": "Can you remove moss, algae, and weeds completely?",
+"acceptedAnswer": {"@type": "Answer","text": "Our team removes moss, algae, lichen, and organic growth, restoring surfaces to a safe, clean, and visually appealing condition."}
+},
+{
+"@type": "Question",
+"name": "Do you provide sealing and maintenance after cleaning?",
+"acceptedAnswer": {"@type": "Answer","text": "Yes, we offer re-sanding, sealing, and protective treatments to maintain surface cleanliness and durability."}
+},
+{
+"@type": "Question",
+"name": "How long does a pressure washing job usually take?",
+"acceptedAnswer": {"@type": "Answer","text": "Most driveways or patios take 1–2 hours, depending on size and condition. Larger or heavily soiled areas may take longer."}
+},
+{
+"@type": "Question",
+"name": "Do you provide quotes before starting work?",
+"acceptedAnswer": {"@type": "Answer","text": "Yes, we provide instant online estimates via our calculator and also offer free on-site assessments for precise pricing."}
+}
+]
+}
+</script>
+
+</head>
+<body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<br><a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</header>
+
+<main>
+
+<h1>Professional Pressure Washing Services in Skellow, Doncaster</h1>
+
+<p>
+Home Repairs 4U delivers expert pressure washing services across Skellow, restoring driveways, patios, decking, walls, and pathways to their original condition. Over time, surfaces accumulate moss, algae, dirt, grime, and black spot, which can lead to unsightly and slippery areas.
+</p>
+
+<p>
+Our cleaning services not only improve visual appeal but also enhance safety, prevent surface degradation, and extend the lifespan of your exterior areas. Whether it’s a residential driveway or a commercial pathway, we provide tailored solutions for every surface type.
+</p>
+
+<p>
+Skellow’s older housing estates and shaded gardens create ideal conditions for organic growth on paving and decking. Our professional pressure washing removes these hazards efficiently and carefully, protecting surfaces while achieving a deep clean.
+</p>
+
+<h2>How We Work</h2>
+
+<p>
+Each project begins with a thorough assessment of your surfaces. We examine the type of material, its condition, and any delicate areas to ensure the cleaning method is perfectly matched. This avoids damage while ensuring maximum cleaning efficiency.
+</p>
+
+<p>
+Heavily soiled or moss-covered surfaces are pre-treated when necessary to loosen grime. Then, our team applies precise pressure washing, focusing on corners, joints, and edges for an even, professional finish.
+</p>
+
+<p>
+Optional follow-up treatments include block paving re-sanding, sealing, and anti-algae/fungicide applications. These enhance durability, reduce maintenance, and keep surfaces looking cleaner for longer.
+</p>
+
+<h2>Instant Pressure Washing Quote</h2>
+<p>Use our calculator to get an estimate for your property:</p>
+
+<form id="quoteForm">
+<label for="sqm">Surface area (m²)</label>
+<input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
+
+<div class="form-row"><input type="checkbox" id="jetwash" checked><label for="jetwash">Standard pressure wash</label></div>
+<div class="form-row"><input type="checkbox" id="fungicide"><label for="fungicide">Algae & moss treatment</label></div>
+<div class="form-row"><input type="checkbox" id="hardbrush"><label for="hardbrush">Heavy soil scrubbing</label></div>
+<div class="form-row"><input type="checkbox" id="resanding"><label for="resanding">Block paving re-sanding</label></div>
+<div class="form-row"><input type="checkbox" id="sealing"><label for="sealing">Surface sealing</label></div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
+</form>
+
+<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+
+<script>
+function calculateQuote(){
+const sqm=parseFloat(document.getElementById('sqm').value);
+if(!sqm||sqm<=0){alert("Please enter a valid surface size.");return;}
+let total=50;
+let items=["Base service, travel and setup: £50.00"];
+if(jetwash.checked){let p=sqm*2.75;total+=p;items.push(`Pressure washing: £${p.toFixed(2)}`);}
+if(fungicide.checked){let p=sqm*0.85;total+=p;items.push(`Algae & moss treatment: £${p.toFixed(2)}`);}
+if(hardbrush.checked){let p=sqm*0.8;total+=p;items.push(`Heavy soil scrubbing: £${p.toFixed(2)}`);}
+if(resanding.checked){let p=sqm*3.95;total+=p;items.push(`Block paving re-sanding: £${p.toFixed(2)}`);}
+if(sealing.checked){let p=sqm*4.65;total+=p;items.push(`Surface sealing: £${p.toFixed(2)}`);}
+document.getElementById("quoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`;
+}
+</script>
+
+<h2>Our Pressure Washing Services</h2>
+
+<h3>Driveway Cleaning</h3>
+<p>
+We remove moss, algae, oil, tyre marks, and dirt from concrete, tarmac, and block paving driveways. Optional re-sanding restores joint stability and prevents weeds.
+</p>
+<a href="#driveway-lightbox"><img src="/images/driveway-pressure-wash.webp" alt="Driveway cleaning Skellow Doncaster" class="service-image" loading="lazy"></a>
+<div id="driveway-lightbox" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt="Driveway enlarged"></a></div>
+
+<h3>Patio & Paving Cleaning</h3>
+<p>
+We clean patios of all types, removing moss, black spot, and weeds while protecting joints and stone surfaces.
+</p>
+<a href="#patio-lightbox"><img src="/images/patio-jet-wash.webp" alt="Patio cleaning Skellow Doncaster" class="service-image" loading="lazy"></a>
+<div id="patio-lightbox" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt="Patio enlarged"></a></div>
+
+<h3>Decking Cleaning</h3>
+<p>
+Decking surfaces are cleaned carefully to remove algae, grime, and dirt, restoring natural colour and preparing surfaces for sealing if required.
+</p>
+<a href="#deck-lightbox"><img src="/images/deck.webp" alt="Decking cleaning Skellow Doncaster" class="service-image" loading="lazy"></a>
+<div id="deck-lightbox" class="lightbox"><a href="#"><img src="/images/deck.webp" alt="Decking enlarged"></a></div>
+
+<h3>Walls, Steps & Pathways</h3>
+<p>
+We remove embedded dirt, moss, and grime from walls, steps, and pathways, improving safety and visual appeal.
+</p>
+<a href="#walls-lightbox"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways cleaning Skellow Doncaster" class="service-image" loading="lazy"></a>
+<div id="walls-lightbox" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways enlarged"></a></div>
+
+<h2>Maintenance Advice</h2>
+<p>
+Regular cleaning prevents long-term surface deterioration from moss, algae, and trapped moisture. Most surfaces benefit from annual cleaning; shaded or high-traffic areas may need more frequent attention. Re-sanding and sealing improves durability and reduces ongoing maintenance.
+</p>
+
+<h2>Book Your Skellow Pressure Washing Service Today</h2>
+<p>
+Call Home Repairs 4U today to restore your driveway, patio, decking, or exterior surfaces in Skellow. We provide professional, reliable services with tailored treatments to protect and enhance your property.
+</p>
+<div style="text-align:center;margin:36px 0;">
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</div>
+
+</main>
+
+<footer>
+© Home Repairs 4U | Pressure Washing Skellow Doncaster
+<br>
+<a href="/services/guttering.html">Guttering</a>
+<a href="/services/fence-installation.html">Fencing</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+<br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" rel="noopener">Facebook</a>
+</footer>
+
+</body>
+  </html>
