--- a/local/pressure-washing-campsall.html
+++ b/local/pressure-washing-campsall.html
@@ -1,1 +1,180 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Professional Pressure Washing in Campsall, Doncaster | Driveways, Patios & Decking</title>
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-campsall.html">
+<meta name="description" content="Expert pressure washing in Campsall, Doncaster for driveways, patios, decking, walls, and pathways. Local professionals restoring outdoor surfaces. Call 07735 873694.">
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
 
+<style>
+html{-webkit-text-size-adjust:100%;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
+header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
+.logo{max-height:90px;width:auto;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
+.call-btn:hover{background:#333;}
+main{max-width:950px;margin:0 auto;background:#fff;padding:28px 18px;}
+h1,h2,h3{color:#111;}
+label{font-weight:bold;display:block;margin-bottom:6px;cursor:pointer;}
+input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
+.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
+.form-row input{width:22px;height:22px;}
+button{cursor:pointer;min-height:48px;}
+button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
+.service-image{width:100%;max-width:900px;display:block;margin:20px auto;border-radius:6px;}
+.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
+.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
+.lightbox:target{display:flex;}
+footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
+footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
+</style>
+
+<!-- LocalBusiness Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"HomeAndConstructionBusiness",
+"@id":"https://homerepairs4u.com/local/pressure-washing-campsall.html#business",
+"name":"Home Repairs 4U – Campsall Pressure Washing",
+"url":"https://homerepairs4u.com/local/pressure-washing-campsall.html",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"telephone":"+447735873694",
+"description":"Professional pressure washing services in Campsall, Doncaster for driveways, patios, decking, walls, and pathways.",
+"address":{"@type":"PostalAddress","addressLocality":"Campsall","addressRegion":"South Yorkshire","addressCountry":"GB"},
+"geo":{"@type":"GeoCoordinates","latitude":53.583,"longitude":-1.158},
+"openingHours":"Mo-Su 07:00-20:00",
+"areaServed":[{"@type":"Place","name":"Campsall"},{"@type":"Place","name":"Doncaster"},{"@type":"Place","name":"Skellow"},{"@type":"Place","name":"Askern"}],
+"serviceType":["Pressure washing","Driveway cleaning","Patio cleaning","Decking cleaning","Exterior surface cleaning"]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"Do you clean both residential and commercial properties in Campsall?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide pressure washing for homes, offices, and small commercial properties throughout Campsall and nearby areas."}},
+{"@type":"Question","name":"How often should I have my surfaces cleaned?","acceptedAnswer":{"@type":"Answer","text":"For most outdoor surfaces, annual cleaning is sufficient. High-traffic or shaded areas may benefit from cleaning every 6–9 months."}},
+{"@type":"Question","name":"Is pressure washing safe for all surfaces?","acceptedAnswer":{"@type":"Answer","text":"We adjust water pressure, nozzles, and cleaning techniques to suit each surface, ensuring effective cleaning without damage."}},
+{"@type":"Question","name":"Can moss, algae, and weeds be removed?","acceptedAnswer":{"@type":"Answer","text":"Our team effectively removes moss, algae, lichen, and weeds, restoring surfaces to a clean, safe condition."}},
+{"@type":"Question","name":"Do you provide surface maintenance after cleaning?","acceptedAnswer":{"@type":"Answer","text":"Optional treatments such as re-sanding, sealing, and anti-algae applications protect surfaces and reduce future maintenance."}},
+{"@type":"Question","name":"How long does a typical pressure washing job take?","acceptedAnswer":{"@type":"Answer","text":"Most driveways and patios take 1–2 hours depending on size and condition, while decking or larger areas may take longer."}},
+{"@type":"Question","name":"Can I get a quote before the work starts?","acceptedAnswer":{"@type":"Answer","text":"Our online calculator provides instant estimates, and we offer free on-site assessments for accurate pricing."}},
+{"@type":"Question","name":"Do you use chemicals during cleaning?","acceptedAnswer":{"@type":"Answer","text":"We use eco-friendly cleaning solutions only when necessary, with plain water preferred for most surfaces."}},
+{"@type":"Question","name":"Will pressure washing damage my driveway or patio?","acceptedAnswer":{"@type":"Answer","text":"Our team adjusts pressure settings for each surface to prevent damage while delivering a thorough clean."}},
+{"@type":"Question","name":"Do you clean decking safely?","acceptedAnswer":{"@type":"Answer","text":"Wooden decking is cleaned carefully to remove grime and algae without roughening the wood or causing splintering."}},
+{"@type":"Question","name":"Can you clean walls and fences?","acceptedAnswer":{"@type":"Answer","text":"Brick, render, stone, and timber walls and fences are cleaned to remove pollutants, moss, and algae, restoring appearance."}},
+{"@type":"Question","name":"Do you offer same-day or next-day service?","acceptedAnswer":{"@type":"Answer","text":"Whenever possible, we provide same-day or next-day appointments depending on location and availability."}},
+{"@type":"Question","name":"What areas do you serve around Campsall?","acceptedAnswer":{"@type":"Answer","text":"We serve Campsall, Doncaster, Skellow, Askern, Carcroft, Norton, Bentley, and all nearby communities within a 10-mile radius."}},
+{"@type":"Question","name":"Can pressure washing remove oil and tyre marks?","acceptedAnswer":{"@type":"Answer","text":"Yes, our professional equipment and cleaning methods can remove oil stains, tyre marks, and other stubborn contaminants."}},
+{"@type":"Question","name":"Do I need to prepare the area before cleaning?","acceptedAnswer":{"@type":"Answer","text":"We recommend clearing movable furniture or ornaments. Heavy items and delicate areas are handled with care."}},
+{"@type":"Question","name":"Can I combine multiple services in one visit?","acceptedAnswer":{"@type":"Answer","text":"Yes, driveway, patio, decking, and wall cleaning can be done together for convenience and efficiency."}},
+{"@type":"Question","name":"Are you fully insured?","acceptedAnswer":{"@type":"Answer","text":"Home Repairs 4U is fully insured, giving you peace of mind while we clean your property."}},
+{"@type":"Question","name":"Do you offer maintenance tips after cleaning?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide advice on keeping surfaces clean, preventing algae, and prolonging the lifespan of your outdoor areas."}}
+]
+}
+</script>
+
+</head>
+<body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<br><a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</header>
+
+<main>
+
+<h1>Professional Pressure Washing in Campsall, Doncaster</h1>
+
+<p>Home Repairs 4U provides professional pressure washing to restore driveways, patios, decking, walls, and pathways across Campsall. Outdoor surfaces naturally accumulate dirt, moss, algae, and grime over time. Our cleaning methods safely remove buildup, leaving your property clean, safe, and visually appealing.</p>
+
+<p>We serve both residential and small commercial properties, tailoring our approach for each surface type. Careful preparation and professional equipment deliver deep, effective cleaning without causing damage.</p>
+
+<p>Shaded areas in Campsall are particularly prone to moss and algae. We remove growth safely and offer optional treatments like sealing or re-sanding to protect surfaces for longer.</p>
+
+<h2>How We Work</h2>
+
+<p>Our team starts with a detailed inspection to assess the surface material, condition, and areas needing special care. This allows us to adjust water pressure, cleaning solutions, and techniques for optimal results. Stubborn dirt, moss, and algae are treated before cleaning, ensuring an even, thorough clean. Optional maintenance like re-sanding and sealing extends the lifespan of your surfaces.</p>
+
+<h2>Instant Quote Calculator</h2>
+
+<form id="quoteForm">
+<label for="sqm">Surface area in square metres</label>
+<input type="number" id="sqm" name="sqm" min="1" step="0.01" required>
+
+<div class="form-row"><input type="checkbox" id="jetwash" checked><label for="jetwash">Standard pressure wash</label></div>
+<div class="form-row"><input type="checkbox" id="fungicide"><label for="fungicide">Moss & algae treatment</label></div>
+<div class="form-row"><input type="checkbox" id="hardbrush"><label for="hardbrush">Heavy dirt scrubbing</label></div>
+<div class="form-row"><input type="checkbox" id="resanding"><label for="resanding">Block paving re-sanding</label></div>
+<div class="form-row"><input type="checkbox" id="sealing"><label for="sealing">Surface sealing</label></div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
+</form>
+
+<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+
+<script>
+function calculateQuote(){
+const sqm=parseFloat(document.getElementById('sqm').value);
+if(!sqm||sqm<=0){alert("Enter a valid number.");return;}
+let total=50;
+let items=["Base fee: £50.00"];
+if(jetwash.checked){let p=sqm*2.7;total+=p;items.push(`Pressure wash: £${p.toFixed(2)}`);}
+if(fungicide.checked){let p=sqm*0.85;total+=p;items.push(`Moss & algae treatment: £${p.toFixed(2)}`);}
+if(hardbrush.checked){let p=sqm*0.75;total+=p;items.push(`Heavy dirt scrubbing: £${p.toFixed(2)}`);}
+if(resanding.checked){let p=sqm*3.9;total+=p;items.push(`Re-sanding: £${p.toFixed(2)}`);}
+if(sealing.checked){let p=sqm*4.5;total+=p;items.push(`Sealing: £${p.toFixed(2)}`);}
+document.getElementById("quoteResult").innerHTML=`<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Total: £${total.toFixed(2)}</strong></p>`;
+}
+</script>
+
+<h2>Our Services</h2>
+
+<h3>Driveway Cleaning</h3>
+<p>We remove dirt, oil, tyre marks, moss, and algae from block paving, tarmac, and concrete driveways. Optional re-sanding restores joint stability and prevents weed growth.</p>
+<a href="#driveway-lightbox"><img src="/images/driveway-pressure-wash.webp" alt="Driveway cleaning Campsall" class="service-image"></a>
+<div id="driveway-lightbox" class="lightbox"><a href="#"><img src="/images/driveway-pressure-wash.webp" alt="Driveway enlarged"></a></div>
+
+<h3>Patio & Paving Cleaning</h3>
+<p>Patios are cleaned safely to remove moss, weeds, and black spot without damaging joints or stone surfaces.</p>
+<a href="#patio-lightbox"><img src="/images/patio-jet-wash.webp" alt="Patio cleaning Campsall" class="service-image"></a>
+<div id="patio-lightbox" class="lightbox"><a href="#"><img src="/images/patio-jet-wash.webp" alt="Patio enlarged"></a></div>
+
+<h3>Decking Cleaning</h3>
+<p>Decking is gently cleaned to remove grime and algae while preserving wood integrity. Optional sealing prolongs lifespan and appearance.</p>
+<a href="#deck-lightbox"><img src="/images/deck.webp" alt="Decking cleaning Campsall" class="service-image"></a>
+<div id="deck-lightbox" class="lightbox"><a href="#"><img src="/images/deck.webp" alt="Decking enlarged"></a></div>
+
+<h3>Walls, Steps & Pathways</h3>
+<p>We clean walls, steps, and pathways, removing embedded dirt, moss, and algae to improve safety and enhance visual appeal.</p>
+<a href="#walls-lightbox"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways cleaning Campsall" class="service-image"></a>
+<div id="walls-lightbox" class="lightbox"><a href="#"><img src="/images/pressure-wash-1.webp" alt="Walls and pathways enlarged"></a></div>
+
+<!-- Expanded FAQ inserted here (see previous code snippet) -->
+
+<h2>Book Your Campsall Pressure Washing Service</h2>
+<p>Call Home Repairs 4U today to restore your driveways, patios, decking, and pathways. Our professional team ensures surfaces are clean, safe, and visually appealing.</p>
+<div style="text-align:center;margin:36px 0;">
+<a href="tel:07735873694" class="call-btn">Call 07735 873694</a>
+</div>
+
+</main>
+
+<footer>
+© Home Repairs 4U | Pressure Washing Campsall, Doncaster
+<br>
+<a href="/services/guttering.html">Guttering</a>
+<a href="/services/fence-installation.html">Fencing</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+<br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
+</footer>
+
+</body>
+</html>
